about us page finalized

--- a/HTTPS 5103-B-Team2B-El Charrito/HTTPS 5103-b-Team2B-El Charrito/location.html
+++ b/HTTPS 5103-B-Team2B-El Charrito/HTTPS 5103-b-Team2B-El Charrito/location.html
@@ -23,7 +23,7 @@
             <a href="#"><img class="logo" src="./images/logo.png" alt="Sumbrero and mustache"></a>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Our Story</a></li>
+                <li><a href="./about.html">About Us</a></li>
                 <li class="dropdown"><a href="#">Our Menu</a>
                     <div class="dropdownContents"><a href="#">Specials</a></div>
                 </li>
@@ -45,7 +45,7 @@
 
     <main class="map-container">
         <section class='location'>
-            <h3 class='title heading'>Location</h3>
+            <h3 class='heading'>Location</h3>
             <p class='description'>We are Ready to Serve You in Kingston</p>
             <div id="map"></div>
             <div class='address'>
@@ -71,7 +71,7 @@
                 <li><a href="#">Specials</a></li>
             </ul>
             <ul>
-                <li><a href="#">About Us</a></li>
+                <li><a href="./about.html">About Us</a></li>
                 <li><a href="./location.html">Location</a></li>
                 <li><a href="#">Events</a></li>
             </ul>
