--- a/HTTPS 5103-B-Team2B-El Charrito/HTTPS 5103-b-Team2B-El Charrito/template.html
+++ b/HTTPS 5103-B-Team2B-El Charrito/HTTPS 5103-b-Team2B-El Charrito/template.html
@@ -18,7 +18,7 @@
             <a href="#"><img class="logo" src="./images/logo.png" alt="Sumbrero and mustache"></a>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Our Story</a></li>
+                <li><a href="./about.html">About Us</a></li>
                 <li class="dropdown"><a href="#">Our Menu</a>
                     <div class="dropdownContents"><a href="#">Specials</a></div>
                 </li>
@@ -95,7 +95,7 @@
                 <li><a href="#">Specials</a></li>
             </ul>
             <ul>
-                <li><a href="#">About Us</a></li>
+                <li><a href="./about.html">About Us</a></li>
                 <li><a href="./location.html">Location</a></li>
                 <li><a href="#">Events</a></li>
             </ul>
